# sqs-monitor

./: CLAUDE.md  Cargo.toml
src/: app.rs  events.rs  main.rs  types.rs  ui.rs
src/aws/: sqs.rs
