[package]
name = "sqs-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-alpha.5"
crossterm = "0.29"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.84"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
